# fsize

./: .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
.hermes/plans/: 2026-06-06_103000-fsize-issue-3-fix.md
src/fsize/: __init__.py
tests/: test.py  test_fsize_init.py
