[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[package]
name = "fsize"
version = "0.0.1"
description = "A simple Python package to deal with file sizes."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["file", "size"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Seth Underwood", email = "@underwoo"}
]
