[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fsize"
description = "A simple Python package to deal with file sizes."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["file", "size"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Seth Underwood"}
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fsize.__version__"}

[tool.mypy]
mypy_path = "src"
packages = "fsize"