[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fsize"
description = "A simple Python package to deal with file sizes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["file", "size"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Seth Underwood"}
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fsize.__version__"}

[tool.mypy]
mypy_path = "src"
packages = "fsize"

[tool.black]
line-length = 80

# cspell: words pythonpath addopts
[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
